2013-11-20  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/CMakeLists.txt: (0.6.9)

	- Fix bug reported by Gary Mirams. Targets in this toolbox were
	missing a dependency to copy_compiler_config.h, which is a dummy
	target we made to make sure that CGAL gets compiled before any ITK
	or CGAL toolbox. The reason is that when CGAL compiles, it
	generates a file called compiler_config.h that dependent targets
	need.

	https://groups.google.com/forum/#!topic/gerardus-users/piPD9MgXqv0

2013-11-13  Ramon Casero  <rcasero@gmail.com>

	* Add ManifoldToolbox/sphtri_vertex_istangled.m: (0.1.0)

	- SPHTRI_VERTEX_ISTANGLED Find tangled vertices in a spherical
	triangular mesh.

	* Add matlab/ManifoldToolbox/trifacet_signed_area.m: (0.1.0)
	* Add matlab/test/test_trifacet_signed_area.m: (0.1.0)

	- TRIFACET_SIGNED_AREA Signed area of the facets in a 2D
	triangulation.

2013-11-10  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/vertex_untangle.m: (0.1.1)
	* Add matlab/test/test_vertex_untangle.m: (0.1.1)

	- Check whether the free vertex is already untangled. In that
	case, we do not relocate it (this is an untangling algorithm, not
	a mesh improvement or mesh smoothing algorithm).

	- Improvement. Replace computing triangle areas using determinants
	by the formula that results from expanding the determinant. This
	produces more accurate results, and allows us to compute all areas
	in one go, without having to use a loop.

2013-11-09  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/vertex_untangle.m: (0.1.0)
	* Add matlab/test/test_vertex_untangle.m: (0.1.0)

	- VERTEX_UNTANGLE Location of a 2D vertex at the centre of a
	closed fan triangular mesh so that we avoid edge overlapping.

2013-11-04  Ramon Casero  <rcasero@gmail.com>

	* matlab/CgalToolbox/CgalCheckSelfIntersect.cpp: (0.4.0)
	* matlab/CgalToolbox/cgal_check_self_intersect.m: (0.2.0)

	- Add input argument ITRI. Row vector of triangle indices. Only